# Horizon

./: .gitignore  README.md  _config.yml  generate_header.py  index.html  pyproject.toml
.github/workflows/: daily-summary.yml
_layouts/: default.html
_posts/: 2026-02-28-summary-en.md  2026-02-28-summary-zh.md  2026-03-01-summary-en.md  2026-03-01-summary-zh.md
data/: config.json
scripts/: daily-run.sh
src/: main.py  models.py  orchestrator.py
src/ai/: analyzer.py  client.py  enricher.py  prompts.py  recommender.py  summarizer.py
src/scrapers/: github.py  rss.py  telegram.py  twitter.py
src/storage/: manager.py
